adding more features

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,21 +6,10 @@ set(CMAKE_CXX_STANDARD 20)
 add_executable(raytracer main.cpp
         vec3.h
         color.h
-        ray.h
         hittable.h
-        sphere.h
-        hittable_list.h
-        rtweekend.h
-        interval.h
-        camera.h
         material.h
-        quad.h
+        ray.h
+        sphere.h
         triangle.h
-        objects.h
-        texture.h)
-
-include_directories(/usr/local/include)
-
-find_package(SFML 2.6 COMPONENTS system window graphics network audio REQUIRED)
-include_directories(${SFML_INCLUDE_DIRS})
-target_link_libraries(raytracer sfml-system sfml-window sfml-graphics sfml-audio sfml-network)
+        floor.h
+        mat3.h)
